# myapi

./: main.py  pyproject.toml  sw.js
backend/: main.py
page/: index.html
page/template/: index.html
static/: script.js  style.css
static/js/: script.js  sw.js
templates/: index.html
templates/about/: about.html
templates/remover/: removebg.html
