[project]
name = "myapi"
version = "0.1.0"
description = "Api for retieve info about apple devices"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "build>=1.4.2",
    "fastapi[standard]>=0.135.2",
    "jinja2>=3.1.6",
    "numpy==2.3.3",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "rembg[cpu]==2.0.62",
    "setuptools>=82.0.1",
    "uvicorn>=0.42.0",
]
